# whisper-voice-assistant

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  testing.py
